Prevent horizontal scrolling
This mostly effects the projects page in how I resized the itch.io
embeds so that everything scales down. Unfortaunatly, when this
happens the page takes the original width still. This appears to fix
this.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,6 +2,11 @@ body {
 	word-wrap: break-word;
 }
 
+body, html {
+	max-width: 100%;
+	overflow-x: hidden;
+}
+
 .navbar-brand {
 	font-size: 1.5em;
 }
